# cosmology.api

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  AUTHORS.rst  CHANGES.rst  CITATION.cff  LICENSE.md  LICENSE.txt  README.md  README.rst  conftest.py  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/workflows/: ci_tests.yml  label_pr.yml  labeler.yml  publish.yml
docs/: .gitignore  changelog.rst  conf.py  how-to-create.rst  how-to-use.rst  index.md  index.rst  install.rst  introduction.rst  quickstart.md  quickstart.rst  typing.rst
docs/_ext/: sphinx_ext_autosummary_context.py  sphinx_ext_cosmology_api.py
docs/_templates/autosummary/: reference.rst
docs/api/: attributes.rst  components.rst  cosmology.rst  groupings.rst  namespaces.rst  protocols.rst  reference.rst  typing.rst
docs/context/: purpose_and_scope.md  purpose_and_scope.rst
docs/dev/: new.rst  types.rst  typing.rst  wrapping.rst
docs/spec/: compat.md  index.md  index.rst  typing.md
docs/tests/: test_arrays.py
src/cosmology/api/: __init__.py  _background.py  _components.py  _constants.py  _core.py  _distances.py  _extras.py  _namespace.py  _perturbations.py  _standard.py  background.py  compat.py  component.py  components.py  constants.py  core.py  extras.py  flrw.py  flrwstandard.py  namespace.py  standard.py
src/cosmology/api/_array_api/: __init__.py  array.py  device.py  dtype.py  linalg.py  namespace.py
src/cosmology/api/compat/: __init__.py  _core.py  _standard.py  background.py  core.py  flrw.py  flrwstandard.py  standard.py
src/cosmology/api/wrapper/: __init__.py  _core.py  _standard.py
tests/: __init__.py
tests/api/: __init__.py  conftest.py  test_background.py  test_compat.py  test_constants.py  test_core.py  test_distances.py  test_flrw.py  test_namespace.py  test_standard.py
tests/api/compat/: conftest.py  test_background.py  test_core.py  test_flrw.py  test_standard.py
tests/api/components/: test_baryon.py  test_curvature.py  test_darkenergy.py  test_darkmatter.py  test_matter.py  test_neutrino.py  test_photon.py  test_total.py
tests/api/distances/: test_comoving.py  test_distances.py  test_lookback.py  test_proper.py  test_scalefactor.py  test_tcmb.py
tests/api/extras/: test_hubble.py  test_rhocrit.py
tests/api/test_components/: test_baryon.py  test_darkenergy.py  test_darkmatter.py  test_globalcurvature.py  test_matter.py  test_neutrino.py  test_photon.py
tests/api/test_extras/: test_hubble.py  test_tcmb.py
tests/api/wrapper/: test_core.py
