[project]
  name = "cosmology.api"
  version = "0.1.0"
  description = "Cosmology API standard"
  readme = "README.rst"
  requires-python = ">=3.9"
  license = {file = "LICENSE.txt"}
  keywords = ["cosmology", "API"]
  authors = [
    {name = "Nathaniel Starkman", email = "n.starkman@mail.utoronto.ca"},
    {name = "Nicolas Tessore", email = "n.tessore@ucl.ac.uk"}
  ]
  maintainers = [
    {name = "Nathaniel Starkman", email = "n.starkman@mail.utoronto.ca"},
    {name = "Nicolas Tessore", email = "n.tessore@ucl.ac.uk"}
  ]
  classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
  ]
  dependencies = [
  ]

[project.optional-dependencies]
  all = [
  ]
  test = [
    "coverage[toml]",
    "numpy>=1.20",
    "pytest",
    "pytest-cov",
    "sybil",
    "typing_extensions",
  ]
  docs = [
    "furo",
    "numpydoc",
    "sphinx",
    "sphinx-copybutton",
    "sybil",
    "tomli",
    "typing_extensions",
  ]

[project.urls]
  homepage = "https://cosmology.readthedocs.org/api"
  repository = "https://github.com/cosmology-api/cosmology-api"
  documentation = "https://cosmology.readthedocs.org/api"


[build-system]
  requires = [
    "mypy>=0.991",
    "setuptools>=45.0",
    "setuptools_scm[toml]>=6.3.1",
    "wheel",
  ]

  build-backend = 'setuptools.build_meta'


[tool.setuptools]
  package-dir = {"" = "src"}

[tool.setuptools_scm]


[tool.coverage.run]
  omit = ["tests/*"]

[tool.coverage.report]
  exclude_lines = [
    # Have to re-enable the standard pragma
    # and branches that don't pertain to this version of Python
    "pragma: no cover",
    "pragma: py{ignore_python_version}",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run
    "if __name__ == .__main__.:",
    # Don't complain about abstract methods, they aren't run:
    '@(abc\.)?abstractmethod',
    # Exclude type check blocks and Protocol contents, they aren't run:
    "if TYPE_CHECKING:",
    '\.\.\.',
    # Don't complain about IPython completion helper
    "def _ipython_key_completions_",
  ]


[tool.mypy]
  python_version = 3.9

  namespace_packages = true
  explicit_package_bases = true
  mypy_path = "$MYPY_CONFIG_FILE_DIR/src"

  strict = true
  disallow_subclassing_any = false
  disallow_untyped_defs = true
  no_implicit_optional = true
  warn_return_any = true
  warn_redundant_casts = true
  warn_unused_configs = true
  warn_unreachable = true
  exclude = '''(^|/)tests/|(^/)docs/|(^/)conftest\.py'''

  [[tool.mypy.overrides]]
    module = "tests/*"
    ignore_errors = true

  [[tool.mypy.overrides]]
    module = "docs/*"
    ignore_errors = true

  [[tool.mypy.overrides]]
    module = [
      "tomli.*",
      "sybil.*",
    ]
    ignore_missing_imports = true


[tool.ruff]
line-length = 88
select = ["ALL"]
ignore = [
  "ANN101",  # Missing type annotation for {name} in method  # TODO: report to Ruff
  "ARG001",  # Unused function argument
  "ARG002",  # Unused method argument
  "COM812",  # trailing-comma-missing
  "D105",  # Missing docstring in magic method
  "D107",  # Missing docstring in __init__
  "D203",  # 1 blank line required before class docstring
  "D213",  # Multi-line docstring summary should start at the second line
  "D401",  # First line of docstring should be in imperative mood
  "FBT003",  # Boolean positional value in function call
  "N802",  # Function name {name} should be lowercase
  "PD",  # pandas-vet
]

[tool.ruff.per-file-ignores]
"src/cosmology/api/_array_api/*.py" = ["A002", "A003", "D212", "D205", "E501", "N801"]
"docs/*.py" = ["INP001"]
"tests/*.py" = [
  "ANN",
  "PLR0913",  # Too many arguments to function call
  "TID252",
]
"test_*.py" = ["D", "N8", "S101"]
